--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
     <header>
         <span>Artisan</span>
         <ul>
@@ -54,52 +53,64 @@
         </div>
     </div>
 <br><br><br>
-<hr class="line-2">
-<!-- 
+<!-- <hr class="line-2"> -->
     <div class="Buy-container">
         <p class="buy-now">Buy from the best</p>
-        <hr>
+        <hr class="line-1">
         <div class="design-options">
             <ul>
-                <li><a href="">T-shirt</a></li>
-                <li><a href="">Cap</a></li></li>
-                <li><a href="">Jumper</a></li></li>
-                <li><a href="">Headsock</a></li></li>
-                <li><a href="">Bag</a></li></li>
-                <li><a href="">Armband</a></li></li>
+                <p class="option-circle-a"></p>
+                <div class="option-a"><li class="options"><a href="">T-shirt</a></li></div>
+                <p class="option-circle-b"></p>
+                <div class="option-b"><li class="options"><a href="">Cap</a></li></li></div>
+                <p class="option-circle-c"></p>
+                <div class="option-c"><li class="options"><a href="">Jumper</a></li></div>
+                <p class="option-circle-d"></p>
+                <div class="option-d"><li class="options"><a href="">Headsock</a></li></div>
+                <p class="option-circle-e"></p>
+                <div class="option-e"><li class="options"><a href="">Bag</a></li></div>
+                <p class="option-circle-f"></p>
+                <div class="option-f"><li class="options"><a href="">Armband</a></li></div>
             </ul>
         </div>
 
-        <div class="buy-1"></div>
-        <div class="buy-2"></div>
-        <div class="buy-3"></div>
-        <div class="buy-4"></div>
+    <div class="buy">
+    <div class="buy-1"><div class="buy-caption">Buy</div></div>
+    <div class="buy-2"><div class="buy-caption">Buy</div></div>
+    <div class="buy-3"><div class="buy-caption">Buy</div></div>
+    <div class="buy-4"><div class="buy-caption">Buy</div></div>
     </div>
 
-    <hr>
+    </div>
+<br><br>
 
     <div class="Discover-container">
         <p class="discover-now">Discover Designs</p>
-        <hr>
+        <hr class="line-1">
         <div class="design-options">
             <ul>
-                <li><a href="">Quotes</a></li>
-                <li><a href="">Screen</a></li></li>
-                <li><a href="">Prints</a></li></li>
-                <li><a href="">African</a></li></li>
-                <li><a href="">Gaming</a></li></li>
-                <li><a href="">Elegant</a></li></li>
+                <p class="option-circle-i"></p>
+                <div class="option-i"><li class="options"><a href="">Quotes</a></li></div>
+                <p class="option-circle-ii"></p>
+                <div class="option-ii"><li class="options"><a href="">Screen</a></li></div>
+                <p class="option-circle-iii"></p>
+                <div class="option-iii"><li class="options"><a href="">Prints</a></li></div>
+                <p class="option-circle-iv"></p>
+                <div class="option-iv"><li class="options"><a href="">African</a></li></div>
+                <p class="option-circle-v"></p>
+                <div class="option-v"><li class="options"><a href="">Gaming</a></li></div>
+                <p class="option-circle-vi"></p>
+                <div class="option-vi"><li class="options"><a href="">Elegant</a></li></div>
             </ul>
 
         </div>
-
-        <div class="Discover-1"></div>
-        <div class="Discover-2"></div>
-        <div class="Discover-3"></div>
-        <div class="Discover-4"></div>
-    </div> -->
-
-
+<div class="discover">
+    <div class="Discover-1"><div class="discover-caption">Discover</div></div>
+    <div class="Discover-2"><div class="discover-caption">Discover</div></div>
+    <div class="Discover-3"><div class="discover-caption">Discover</div></div>
+    <div class="Discover-4"><div class="discover-caption">Discover</div></div>
+</div>
+    </div>
 
 </body>
 </html>
